syntax = "proto3";
package cudosnode.cudosnode.nft;

import "gogoproto/gogo.proto";

option go_package = "github.com/CudoVentures/cudos-node/x/nft/types";
option (gogoproto.goproto_getters_all) = false;

// Msg defines the NFT Msg service.
service Msg {
    // IssueDenom defines a method for issue a denom.
    rpc IssueDenom(MsgIssueDenom) returns (MsgIssueDenomResponse);

    // MintNFT defines a method for mint a new nft
    rpc MintNFT(MsgMintNFT) returns (MsgMintNFTResponse);

    // EditNFT defines a method for editing a nft.
    rpc EditNFT(MsgEditNFT) returns (MsgEditNFTResponse);

    // TransferNft transfers ownership of the token to recipient account.
    rpc TransferNft(MsgTransferNft) returns (MsgTransferNftResponse);

    // Approve grants permission to spender to transfer or send the given token.
    rpc ApproveNft(MsgApproveNft) returns (MsgApproveNftResponse);

    // Approve grants permission to spender to transfer or send the given token.
    rpc ApproveAllNft(MsgApproveAllNft) returns (MsgApproveAllNftResponse);

    // Revokes permission to spender to transfer or send the given token.
      rpc RevokeNft(MsgRevokeNft) returns (MsgRevokeNftResponse);

    // BurnNFT defines a method for burning a nft.
    rpc BurnNFT(MsgBurnNFT) returns (MsgBurnNFTResponse);

    // TransferDenom defines a method for transferring a denom.
    rpc TransferDenom(MsgTransferDenom) returns (MsgTransferDenomResponse);
}

// MsgIssueDenom defines an SDK message for creating a new denom.
message MsgIssueDenom {
    option (gogoproto.equal) = true;

    string id = 1;
    string name = 2;
    string schema = 3;
    string sender = 4;
    string contractAddressSigner = 5;
    string symbol = 6;
}

// MsgIssueDenomResponse defines the Msg/IssueDenom response type.
message MsgIssueDenomResponse {}

// MsgTransferNft defines an SDK message for transferring an NFT to recipient.
message MsgTransferNft {
    option (gogoproto.equal) = true;

    string denom_id = 1 [ (gogoproto.moretags) = "yaml:\"denom_id\"" ];
    string token_id = 2;
    string from = 3;
    string to = 4;
    string sender = 5;
    string contractAddressSigner = 6;
}

// MsgTransferNftResponse defines the Msg/TransferNft response type.
message MsgTransferNftResponse {}

// MsgApproveNft defines an SDK message for granted approval.
message MsgApproveNft {
    option (gogoproto.equal) = true;

    string id = 1;
    string denom_id = 2 [ (gogoproto.moretags) = "yaml:\"denom_id\"" ];
    string sender = 3;
    string approvedAddress = 4;
    string contractAddressSigner = 5;
}

// MsgApproveNft defines the Msg/Approve response type.
message MsgApproveNftResponse {}

message MsgApproveAllNft {
    option (gogoproto.equal) = true;

    string  operator = 1;
    string  sender = 2;
    bool  approved = 3;
    string contractAddressSigner = 4;

}

// MsgApproveNft defines the Msg/Approve response type.
message MsgApproveAllNftResponse {}


// MsgRevokeNft defines an SDK message for revoking a previously granted permission to transfer the given an NFT.
message MsgRevokeNft {
    option (gogoproto.equal) = true;

    string addressToRevoke = 1;
    string denom_id = 2 [ (gogoproto.moretags) = "yaml:\"denom_id\"" ];
    string token_id = 3 [ (gogoproto.moretags) = "yaml:\"denom_id\"" ];
    string sender = 4;
    string contractAddressSigner = 5;
}

// MsgRevokeNftResponse defines the Msg/RevokeNft response type.
message MsgRevokeNftResponse {}

// MsgEditNFT defines an SDK message for editing a nft.
message MsgEditNFT {
    option (gogoproto.equal) = true;

    string id = 1;
    string denom_id = 2 [ (gogoproto.moretags) = "yaml:\"denom_id\"" ];
    string name = 3;
    string uri = 4 [ (gogoproto.customname) = "URI" ];
    string data = 5;
    string sender = 6;
    string contractAddressSigner = 7;

}

// MsgEditNFTResponse defines the Msg/EditNFT response type.
message MsgEditNFTResponse {}

// MsgMintNFT defines an SDK message for creating a new NFT.
message MsgMintNFT {
    option (gogoproto.equal) = true;

    string denom_id = 1 [ (gogoproto.moretags) = "yaml:\"denom_id\"" ];
    string name = 2;
    string uri = 3 [ (gogoproto.customname) = "URI" ];
    string data = 4;
    string sender = 5;
    string recipient = 6;
    string contractAddressSigner = 7;
}

// MsgMintNFTResponse defines the Msg/MintNFT response type.
message MsgMintNFTResponse {}

// MsgBurnNFT defines an SDK message for burning a NFT.
message MsgBurnNFT {
    option (gogoproto.equal) = true;

    string id = 1;
    string denom_id = 2 [ (gogoproto.moretags) = "yaml:\"denom_id\"" ];
    string sender = 3;
    string contractAddressSigner = 4;
}

// MsgBurnNFTResponse defines the Msg/BurnNFT response type.
message MsgBurnNFTResponse {}

// MsgTransferDenom defines an SDK message for transferring an denom to recipient.
message MsgTransferDenom {
    option (gogoproto.equal) = true;
    string id = 1;
    string sender = 2;
    string recipient = 3;
    string contractAddressSigner = 4;
}

// MsgTransferDenomResponse defines the Msg/TransferDenom response type.
message MsgTransferDenomResponse {}
